# pkodev.mod.npcpos

./: .gitignore  CMakeLists.txt  README.md  address.h  build.bat  dllmain.cpp  hook.h  import.cpp  import.h  pkodev.mod.npcpos.sln  pkodev.mod.npcpos.vcxproj  pkodev.mod.npcpos.vcxproj.filters  structure.h  utils.h
doc/: pkodev.mod.npcpos.doc.en.md  pkodev.mod.npcpos.doc.ru.md
